Fix spacing issues on modal pop-up

--- a/css/app.css
+++ b/css/app.css
@@ -137,7 +137,7 @@ h1 {
     border: 1px solid #f7eaf3;
     border-radius: 8px;
     width: 300px;
-    height: 300px;
+    height: 400px;
     text-align: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.8);
 }
@@ -154,7 +154,6 @@ h1 {
     padding: 1em;
     border: 1px solid #f7eaf3;
     border-radius: 8px;
-    margin: 20px;
 }
 
 .replay:hover,
